<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".totalScreen"
    tools:ignore="Autofill">

    <TextView
        android:id="@+id/tv_taco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/img_taco_String"
        android:textSize="18sp"
        android:translationX="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tacoNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/et_taco_String"
        android:textSize="18sp"
        android:translationX="290dp"
        android:translationY="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_torta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:text="@string/img_torta_String"
        android:textSize="18sp"
        android:translationX="40dp"
        android:translationY="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_taco" />

    <TextView
        android:id="@+id/tv_tortaNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="40dp"
        android:text="@string/et_torta_String"
        android:textSize="18sp"
        android:translationX="290dp"
        android:translationY="185dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tacoNumber" />

    <TextView
        android:id="@+id/tv_refresco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:text="@string/img_refresco_String"
        android:textSize="18sp"
        android:translationX="40dp"
        android:translationY="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_torta" />

    <TextView
        android:id="@+id/tv_refrescoNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="40dp"
        android:text="@string/et_refresco_String"
        android:textSize="18sp"
        android:translationX="290dp"
        android:translationY="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tortaNumber" />

    <EditText
        android:id="@+id/et_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/et_receipt_String"
        android:inputType="number"
        android:translationX="35dp"
        android:translationY="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_total_String"
        android:textSize="18sp"
        android:translationX="40dp"
        android:translationY="170dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_refresco" />

    <TextView
        android:id="@+id/tv_totalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:text="@string/tv_totalNumber_String"
        android:textSize="18sp"
        android:translationX="290dp"
        android:translationY="105dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_refrescoNumber" />

    <Button
        android:id="@+id/btn_exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:onClick="exchange"
        android:text="@string/btn_exchange_String"
        android:translationX="40dp"
        android:translationY="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_exchange" />

    <TextView
        android:id="@+id/tv_exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_exchange_String"
        android:textSize="24sp"
        android:translationX="20dp"
        android:translationY="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_receipt" />

    <TextView
        android:id="@+id/tv_exchangeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:text="@string/tv_exchangeNumber_String"
        android:textSize="24sp"
        android:translationX="290dp"
        android:translationY="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_receipt" />

    <Button
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:onClick="goBack"
        android:text="@string/btn_return_String"
        android:translationX="50dp"
        android:translationY="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_exchange" />
</RelativeLayout>