<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PricesActivity"
    tools:ignore="Autofill">

    <ImageView
        android:id="@+id/iv_tacoPrice"
        android:layout_width="120dp"
        android:layout_height="85dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/img_taco_String"
        android:translationX="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/taco" />

    <EditText
        android:id="@+id/et_tacoPrice"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/et_taco_String"
        android:inputType="numberDecimal"
        android:textSize="30sp"
        android:translationX="215dp"
        app:layout_constraintStart_toEndOf="@+id/iv_tacoPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_tortaPrice"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/et_torta_String"
        android:inputType="numberDecimal"
        android:textSize="30sp"
        android:translationX="215dp"
        app:layout_constraintStart_toEndOf="@+id/iv_tortaPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_refrescoPrice"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="290dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/et_refresco_String"
        android:inputType="numberDecimal"
        android:textSize="30sp"
        android:translationX="215dp"
        app:layout_constraintStart_toEndOf="@+id/iv_refrescoPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_tortaPrice"
        android:layout_width="120dp"
        android:layout_height="85dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/img_torta_String"
        android:translationX="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/torta" />

    <ImageView
        android:id="@+id/iv_refrescoPrice"
        android:layout_width="120dp"
        android:layout_height="85dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="290dp"
        android:contentDescription="@string/img_refresco_String"
        android:translationX="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/refresco" />

    <Button
        android:id="@+id/btn_savePrices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="408dp"
        android:onClick="savePrices"
        android:text="@string/btn_savePrices"
        android:translationX="185dp"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="408dp"
        android:onClick="cancel"
        android:text="@string/btn_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>